kubernetes/portal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ftnl-web-server
spec:
  selector:
    app.kubernetes.io/name: ftnl-web-server
  ports:
    - name: http
      port: 3000
      targetPort: http
