kubernetes/portal/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ftnl-web-server
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts: [upload.file-tunnel.dev]
      secretName: ftnl-upload-public-tls
  rules:
    - host: upload.file-tunnel.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ftnl-web-server
                port:
                  name: http
